--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
-
+    implementation 'com.google.android.material:material:1.5.0'
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
