--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
     implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
