--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ materialCalendarview = "2.0.1"
 materialCalendarviewVersion = "1.4.3"
 navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
+activity = "1.8.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -22,6 +23,7 @@ material-calendarview = { module = "com.github.prolificinteractive:material-cale
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 prolificinteractive-material-calendarview = { module = "com.prolificinteractive:material-calendarview", version.ref = "materialCalendarviewVersion" }
+activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
